# FincanceExtractor

./: ARCHITECTURE.md  CONCEPT.md  README.md  diverse_report.json  diverse_report.md  ifrs9_benchmark_report.json  ifrs9_benchmark_report.md  local_report.json  local_report.md  pyproject.toml  remote_report.json  remote_report.md  requirements.txt
.claude/: settings.local.json
ifrs9_benchmark/: __init__.py  cli.py  extract.py  fetch.py  models.py  parse.py  report.py  utils.py
tests/: test_extract.py
